fix(card-enhancements): wrap themes styles in mixin

--- a/src/framework/theme/components/card/flip-card/_flip-card.component.theme.scss
+++ b/src/framework/theme/components/card/flip-card/_flip-card.component.theme.scss
@@ -1,5 +1,7 @@
-.flip-button {
-  line-height: nb-theme(card-line-height);
-  margin-bottom: nb-theme(card-margin);
-  padding: nb-theme(card-padding);
+@mixin nd-flip-card-theme {
+  .flip-button {
+    line-height: nb-theme(card-line-height);
+    margin-bottom: nb-theme(card-margin);
+    padding: nb-theme(card-padding);
+  }
 }
