--- a/src/framework/theme/components/card/reveal-card/_reveal-card.component.theme.scss
+++ b/src/framework/theme/components/card/reveal-card/_reveal-card.component.theme.scss
@@ -1,10 +1,12 @@
-.second-card-container {
-  height: calc(100% - #{nb-theme(card-margin)});
-  border-radius: nb-theme(card-border-radius);
-}
+@mixin nd-reveal-card-theme {
+  .second-card-container {
+    height: calc(100% - #{nb-theme(card-margin)});
+    border-radius: nb-theme(card-border-radius);
+  }
 
-.reveal-button {
-  line-height: nb-theme(card-line-height);
-  padding: nb-theme(card-padding);
-  margin-bottom: nb-theme(card-margin);
+  .reveal-button {
+    line-height: nb-theme(card-line-height);
+    padding: nb-theme(card-padding);
+    margin-bottom: nb-theme(card-margin);
+  }
 }
